# Navigation_t

./: .gitignore  BUILD_GUIDE.md  BUILD_SCRIPTS_GUIDE.md  CMakeLists.txt  CROSS_PLATFORM_BUILD_SUMMARY.md  GEOCODER_MODERNIZATION_ANALYSIS.md  ICON_REMOVAL_SUMMARY.md  README.md  README.txt  build.bat  build.sh  create_package.bat  deploy.bat  quick_deploy.bat  start_full_system.bat  start_full_system.sh  start_gui.bat  start_gui.sh  start_system.bat  start_system.sh
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake
common/: CMakeLists.txt
common/include/: nav_messages.h  nav_types.h  nav_utils.h  service_base.h
common/src/: can_interface.cpp  nav_utils.cpp  nmea_parser.cpp  service_base.cpp
docs/: ENHANCED_HMI_FEATURES.md  GEOCODER_MODERNIZATION_ANALYSIS.md  PHASE1_COMPLETE_GUIDE.md  PHASE1_IMPLEMENTATION.md  PHASE1_IMPLEMENTATION_PLAN.md  PHASE1_QUICKSTART.md  PHASE2_COMPLETE_GUIDE.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE3_IMPLEMENTATION_PLAN.md  PHASE4_5_DEPLOYMENT_PLAN.md  PROJECT_ORGANIZATION.md  QT_FRAMEWORK_INTEGRATION.md  QUICK_REFERENCE.md  REORGANIZATION_SUMMARY.md  SERVICE_INTEGRATION.md  SPATIAL_INDEX_MECHANISM_EXPLAINED.md  SPATIAL_INDEX_VISUAL_FLOW.md
hmi/: CMakeLists.txt  README_GUI.md  resources.qrc
hmi/controllers/include/: integrated_navigation_controller.h
hmi/controllers/src/: integrated_navigation_controller.cpp
hmi/icons/: README.md
hmi/include/: map_renderer.h  navigation_controller.h  navigation_controller_v2.h  navigation_main_window.h  service_interfaces.h
hmi/maps/: poi_database.json
hmi/models/include/: navigation_models.h  service_interfaces.h
hmi/models/src/: navigation_models.cpp
hmi/resources/maps/: README.md
hmi/services/geocoding/batch/include/: batch_geocoder.h
hmi/services/geocoding/batch/src/: batch_geocoder.cpp
hmi/services/geocoding/cache/include/: geocoding_cache.h
hmi/services/geocoding/cache/src/: geocoding_cache.cpp
hmi/services/geocoding/fuzzy/include/: fuzzy_address_matcher.h  string_matcher.h
hmi/services/geocoding/fuzzy/src/: fuzzy_address_matcher.cpp  string_matcher.cpp
hmi/services/geocoding/include/: address_components.h  address_normalizer.h  address_parser.h  enhanced_geocoding.h  spatial_index.h
hmi/services/geocoding/src/: address_components.cpp  address_normalizer.cpp  address_parser.cpp  spatial_index.cpp
hmi/services/guidance/include/: guidance_service_core.h
hmi/services/guidance/src/: guidance_service_core.cpp
hmi/services/include/: map_service_core.h  poi_service.h
hmi/services/map/include/: map_service_core.h
hmi/services/map/src/: map_service_core.cpp
hmi/services/poi/include/: poi_service.h
hmi/services/poi/src/: poi_service.cpp
hmi/services/positioning/include/: positioning_service_core.h
hmi/services/positioning/src/: positioning_service_core.cpp
hmi/services/routing/include/: routing_service_core.h
hmi/services/routing/src/: routing_service_core.cpp
hmi/services/src/: guidance_service_core.cpp  map_service_core.cpp  poi_service.cpp  positioning_service_core.cpp  routing_service_core.cpp
hmi/src/: console_main.cpp  main.cpp  map_renderer.cpp  map_widget.cpp  navigation_controller.cpp  navigation_controller_v2.cpp  navigation_main_window.cpp  navigation_models.cpp  service_clients.cpp  service_clients_qt.cpp
hmi/ui/: navigation_main_window.ui  navigation_main_window.ui.autosave
hmi/ui/include/: map_widget.h  navigation_main_window.h  navigation_main_window.h.backup
hmi/ui/src/: map_widget.cpp  navigation_main_window.cpp  navigation_main_window_simple.cpp
install/etc/: navigation.conf
scripts/: README.md  build.bat  build.sh  build_and_deploy.bat  deploy.config  rebuild_and_run.bat  run_integrated_nav.bat
services/guidance/: CMakeLists.txt
services/guidance/include/: guidance_service.h
services/guidance/src/: guidance_main.cpp  guidance_service.cpp  route_monitoring.cpp  turn_by_turn.cpp
services/map/: CMakeLists.txt
services/map/include/: map_service.h
services/map/src/: map_data_loader.cpp  map_main.cpp  map_service.cpp  map_tile_manager.cpp
services/positioning/: CMakeLists.txt
services/positioning/include/: positioning_service.h
services/positioning/src/: dead_reckoning.cpp  map_matching.cpp  positioning_main.cpp  positioning_main_qt.cpp  positioning_service.cpp
services/routing/: CMakeLists.txt
services/routing/include/: routing_service.h
services/routing/src/: astar_algorithm.cpp  routing_main.cpp  routing_service.cpp
tests/: CMakeLists.txt  test_address_components.cpp
